# tdm

./: .build.yml  .clang-format  .gitignore  .gitlab-ci.yml  LICENSE  README.md  TESTING.md  meson.build  meson_options.txt
.forgejo/workflows/: test.yaml
.github/workflows/: test.yaml
ci/: adduser.sh
pam.d/: tdm-login
src/: app.cpp  app.h  app.test.cpp  config.h.in  except.h  main.cpp  main.test.cpp  meson.build  singleton.h  testing.cpp  testing.h
src/freedesktop/: desktop.cpp  desktop.h  desktop.test.cpp  meson.build
src/io/: io.h  meson.build
src/io/socket/: basic_stream.cpp  basic_stream.h  meson.build  nonblocking_stream.cpp  nonblocking_stream.h  nonblocking_stream.test.cpp  stream.cpp  stream.h  stream.test.cpp
src/lib/: curses.cpp  curses.h  meson.build  pam.cpp  pam.h  sys.cpp  sys.h  sys.test.cpp  term.cpp  term.h
src/lib/mocks/: curses.h  pam.h  sys.h  term.h
src/lib/stubs/: curses.cpp  curses.h
src/pam/: meson.build  session.cpp  session.h  session.test.cpp
src/sys/: exec.cpp  exec.h  exec.test.cpp  meson.build  passwd.cpp  passwd.h  passwd.test.cpp  process.cpp  process.h  process.test.cpp
src/tui/: basic_window.h  color.cpp  color.h  color.test.cpp  login.cpp  login.h  login.test.cpp  meson.build  screen.cpp  screen.h  screen.test.cpp  window.cpp  window.h
src/util/: argparse.cpp  argparse.h  argparse.test.cpp  container.h  datetime.cpp  datetime.h  datetime.test.cpp  env.cpp  env.h  env.test.cpp  filesystem.cpp  filesystem.h  filesystem.test.cpp  logger.cpp  logger.h  logger.test.cpp  meson.build  str.cpp  str.h  str.test.cpp  termio.cpp  termio.h  termio.test.cpp
