argparse_test = executable('argparse_test',
  'argparse.test.cpp',
  dependencies : test_deps)
test('argparse test', argparse_test)

logger_test = executable('logger_test',
  'logger.test.cpp',
  dependencies : test_deps)
test('logger test', logger_test)

str_test = executable('str_test',
  'str.test.cpp',
  dependencies : test_deps)
test('str test', str_test)

termio_test = executable('termio_test',
  'termio.test.cpp',
  dependencies : test_deps)
test('termio test', termio_test)
